add simple client, adding devices, edit devices and query firewall rules
